--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,7 @@
+RewriteEngine on
+RewriteCond %{HTTP_HOST} ^www\.jordanandmathew\.com [NC]
+RewriteRule ^(.*)$ http://jordanandmathew.com/$1 [L,R=301]
+
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE] 
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
